[package]
name = "egui-tao"
authors = ["Siddharth <siddharth99c@gmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.12"
bytemuck = "1.23.1"
chrono = "0.4.41"
egui = "0.31.1"
egui-wgpu = "0.31.1"
log = "0.4.27"
pollster = "0.4.0"
profiling = "1.0.17"
raw-window-handle = "0.6.2"
serde = "1.0.219"
tao = "0.34.0"
web-time = "1.1.0"
